[gd_scene load_steps=2 format=2]

[ext_resource path="res://MusicManager.gd" type="Script" id=1]

[node name="MusicManager" type="Node"]
script = ExtResource( 1 )

[node name="mainmenu_bgm" type="AudioStreamPlayer" parent="."]

[node name="gameover_music" type="AudioStreamPlayer" parent="."]

[node name="stage1_music" type="AudioStreamPlayer" parent="."]

[node name="stage2_music" type="AudioStreamPlayer" parent="."]

[node name="infinite_music" type="AudioStreamPlayer" parent="."]
